Refactor: Facade 및 Service 단 코드 리팩토링
- @Transactional에 대한 리팩토링 수행.
- 상수는 private static final로 상단에서 정의함.
- 불필요한 구문 일부 제거.